--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,43 +1,57 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main","v1.1","v1.2","v1.3"]
+    branches:
+      - main
+      - v1.1
+      - v1.2
+      - v1.3  # Add more branches if needed
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      # Create a folder for each version (based on branch name)
+      - name: Setup directory for deployment
+        run: |
+          BRANCH_NAME=$(echo "${GITHUB_REF#refs/heads/}" | tr / -)  # Replace slashes with dashes for folder names
+          mkdir -p "deploy/$BRANCH_NAME"  # Create folder with branch name
+
+      # Copy all files into the respective folder (for versioned deployment)
+      - name: Copy files for deployment
+        run: |
+          cp -r ./* deploy/$BRANCH_NAME/
+
+      # Setup Pages for deployment
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
+      # Upload the entire repository, including versioned folders
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: '.'
+          path: 'deploy'  # Upload the 'deploy' folder that contains versioned subfolders
+
+      # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
