--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,28 +27,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the code of the current branch
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Step 2: Setup GitHub Pages
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
+      # Step 3: Prepare versioned folder (based on branch name)
       - name: Prepare versioned folder
         run: |
           BRANCH_NAME=$(echo "${GITHUB_REF#refs/heads/}" | tr / -)
           mkdir -p "deploy/$BRANCH_NAME"
           rsync -av --exclude='deploy' --exclude='.git' --exclude='.github' ./ "deploy/$BRANCH_NAME/"
 
-      - name: List contents to debug
-        run: |
-          echo "=== Deploy directory structure ==="
-          ls -R deploy
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      # Step 4: Checkout the gh-pages branch (ensure it's up-to-date)
+      - name: Checkout gh-pages branch
+        uses: actions/checkout@v4
         with:
-          path: 'deploy'
+          ref: gh-pages
 
+      # Step 5: Copy new branch contents into gh-pages
+      - name: Copy version folder to gh-pages
+        run: |
+          BRANCH_NAME=$(echo "${GITHUB_REF#refs/heads/}" | tr / -)
+          rsync -av --exclude='.git' --exclude='.github' "deploy/$BRANCH_NAME/" ./ 
+          git add .
+          git commit -m "Deploy $BRANCH_NAME to gh-pages"
+          git push origin gh-pages
+
+      # Step 6: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
