--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,9 +38,15 @@ jobs:
           mkdir -p "deploy/$BRANCH_NAME"
           rsync -av --exclude='deploy' --exclude='.git' --exclude='.github' ./ "deploy/$BRANCH_NAME/"
 
-      # Step 3: Setup GitHub Pages using the specific folder for the branch
+      # Step 3: Upload the folder as an artifact
+      - name: Upload versioned folder as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: deploy/
+
+      # Step 4: Deploy to GitHub Pages (This step needs the uploaded artifact)
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
-          branch: ${{ github.ref_name }}  # Deploy from the current branch
-          folder: "deploy/${{ github.ref_name }}"  # Use the specific folder for each version
+          token: ${{ secrets.GITHUB_TOKEN }}
