--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,4 @@
-name: Deploy static content to GitHub Pages
+name: Deploy Static HTML Version
 
 on:
   push:
@@ -8,63 +8,19 @@ on:
       - v1.2
       - v1.3
 
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+
     steps:
-      # Checkout the code
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      # Get the current branch name (e.g., main, v1.1, v1.2)
-      - name: Set Branch Name
-        id: branch_name
-        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" >> $GITHUB_ENV
-
-      # Create the deploy folder for the current branch
-      - name: Prepare versioned folder
-        run: |
-          # Create the versioned folder to deploy
-          mkdir -p "deploy/${{ env.BRANCH_NAME }}"
-          
-          # Copy the necessary files while avoiding symlinks and hard links
-          rsync -av --no-links --exclude='.git' --exclude='.github' --exclude='deploy' ./ "deploy/${{ env.BRANCH_NAME }}/"
-          
-          # Check for any symlinks in the folder
-          if find deploy/${{ env.BRANCH_NAME }}/ -type l | grep -q .; then
-            echo "ERROR: Symlinks found in the deploy directory!"
-            exit 1
-          fi
-
-      # Upload artifact for deployment (using v2)
-      - name: Upload artifact for Pages deployment
-        uses: actions/upload-artifact@v2
-        with:
-          name: github-pages
-          path: deploy/${{ env.BRANCH_NAME }}
-
-      # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          artifact_name: github-pages
-          token: ${{ secrets.GITHUB_TOKEN }}
-          timeout: 600000
-          error_count: 10
-          reporting_interval: 5000
-          preview: false
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: deploy  # This branch will be created automatically
+          publish_dir: ./         # Root directory (adjust if files are inside a subfolder)
+          destination_dir: ${{ github.ref_name }}  # Puts files in /main/, /v1.1/, etc.
+          keep_files: true  # Keeps existing versions in the deploy branch
